--- a/src/scss/components/OperationDetailsComponent.scss
+++ b/src/scss/components/OperationDetailsComponent.scss
@@ -16,7 +16,9 @@
         }
     }
 
-    .zoom-controls {
+    .controls {
+        display: inline-flex;
+        flex-direction: column;
         margin-bottom: 0;
     }
 
